--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -1,76 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="stylesheets/aboutus.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="stylesheets/aboutus.css" />
     <title>Aboutus</title>
-</head>
-<body>
+  </head>
+  <body>
     <%- include('./layout/header') %>
     <section class="video">
-        <video  autoplay muted>
-          <source src="" type="video/mp4">
-        </video>
-        <h1>EXPECT THE BEST...</h1>
+      <video autoplay muted loop>
+        <source src="../images/aboutus/vidAbout.mp4" type="video/mp4" />
+      </video>
+      <h1>EXPECT THE BEST...</h1>
     </section>
- <!-- visionmission -->
- <section class="visionmission">
-   <div class="vision">
-     <span class="visionspan">
-      <h2>OUR  VISION</h2>
-    </span>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-      </p>
-   </div>
-   <div class="mission">
-    <span class="missionspan">
-      <h2>OUR  MISSION</h2>
-    </span>
-    <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-    </p>
- </div>
- </section>
- <!-- Timeline -->
- <section class="timeline">
+    <!-- visionmission -->
+    <section class="visionmission">
+      <div class="vision">
+        <span class="visionspan">
+          <h2>OUR VISION</h2>
+        </span>
+        <p>
+          To be an Indian’s best training Institute to impart understanding and
+          application-based education to the young talents and carving them into
+          creative human resources who are having sufficient knowledge, with
+          competitive edge, National Integrity and social responsibility and who
+          are the input for India's top Medical Engineering and professional
+          colleges.
+        </p>
+      </div>
+      <div class="mission">
+        <span class="missionspan">
+          <h2>OUR MISSION</h2>
+        </span>
+        <p>
+          1. To give awareness on competitive exams among the school students
+          and develop science and maths foundation in school going children. 
+        <p>
+          2.To impart state of art training for the competitive exams such as
+          NEET, JEE etc., to the students and develop competitive spirit to set
+        </p>
+      </div>
+    </section>
+    <!-- Timeline -->
+    <section class="timeline">
       <h2>Our Journey So Far</h2>
-      <span><img src="image/home/classic-nee-tacademy-logo" alt="CLASSICNEET" /></span>
+      <span
+        ><img src="../images/home/classic-nee-tacademy-logo.png" alt="CLASSICNEET"
+      /></span>
+      <img src="../images/aboutus/group19.png" class="book" alt="">
       <div class="cards1">
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum is simply dummy text of the printing and
+          typesetting industry.
         </p>
       </div>
       <div class="cards2">
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum is simply dummy text of the printing and
+          typesetting industry.
         </p>
       </div>
       <div class="cards3">
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum is simply dummy text of the printing and
+          typesetting industry.
         </p>
       </div>
       <div class="cards4">
         <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum is simply dummy text of the printing and
+          typesetting industry.
         </p>
       </div>
- </section>
- <!-- leaders -->
- 
- <section class="leaders">
-    <h2>Our Leader</h2>
-     <span><img src="images/aboutus/leader.jpg" alt="Leader"/></span>
- </section>
- <section class="app">
-   <div class="apppage">
-     <h2>Get Our Learning<br>App</h2>
-     <img src="images/aboutus/download.jpg">
-   </div>
- </section>
- <%- include('./layout/footer') %>
-</body>
+    </section>
+    <!-- leaders -->
+
+    <section class="leaders">
+      <h2>Our Founders</h2>
+      <span><img src="images/aboutus/leader.jpg" alt="Leader" /></span>
+    </section>
+    <section class="app">
+      <div class="apppage">
+        <h2>Get Our Learning<br />App</h2>
+        <img src="images/aboutus/download.jpg" />
+      </div>
+    </section>
+    <%- include('./layout/footer') %>
+  </body>
 </html>
