--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -7,12 +7,15 @@
     padding: 9rem 0rem 0rem 0rem;
     flex-direction: column;
   }
+  .mission {
+    
+  }
   .video h1 {
     border: 1px solid black;
     background-color: white;
     border-radius: 35px;
     width: 35%;
-    height: 10vh;
+    
     display: flex;
     justify-content: center;
     padding: 1rem;
@@ -21,10 +24,11 @@
   .visionmission {
     width: 100%;
     height: 70vh;
-    background: url("images/aboutus/leader.jpg");
+    background: url("../images/aboutus/bgvision.jpg");
     background-size: cover;
     background-position: 0px 54%;
     position: relative;
+    background-attachment: fixed;
   }
   .vision {
     position: relative;
@@ -39,26 +43,31 @@
   }
   .vision h2 {
     color: #000000;
-    padding: 4% 5%;
+    padding: 2% 5%;
   }
   .vision p {
     width: 70%;
     height: 10vh;
     word-spacing: 5px;
     line-break: normal;
-    line-height: 110%;
+    line-height: 2rem;
+    font-size: 1.3rem;
+    font-weight: 500;
   }
   /* mission */
   .mission h2 {
     color: black;
-    padding: 4% 5%;
+    padding: 2% 5%;
+    margin-top: 4rem;
   }
   .mission p {
     width: 70%;
     height: 10vh;
     word-spacing: 5px;
     line-break: normal;
-    line-height: 110%;
+    line-height: 2rem;
+    font-size: 1.3rem;
+    font-weight: 500;
   }
   .mission {
     position: relative;
@@ -85,11 +94,16 @@
   .timeline span {
     width: 90px;
     height: 80px;
+    position: relative;
+    transform: translateX(-50%);
+    margin-left: auto;
+    margin-right: auto;
+
   }
   .timeline span img {
-    padding-left: 26rem;
+    
     height: 100%;
-    padding-bottom: 0rem;
+    
   }
   .cards1 p {
     width: 90%;
@@ -99,6 +113,10 @@
     align-items: center;
     padding-left: 48%;
     padding-top: 5%;
+    line-height: 2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    
   }
   .cards2 p {
     width: 90%;
@@ -108,6 +126,9 @@
     align-items: center;
     padding-left: 48%;
     padding-top: 5%;
+    line-height: 2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
   }
   .cards3 p {
     width: 90%;
@@ -117,6 +138,9 @@
     align-items: center;
     padding-left: 48%;
     padding-top: 5%;
+    line-height: 2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
   }
   .cards4 p {
     width: 90%;
@@ -126,6 +150,24 @@
     align-items: center;
     padding-left: 48%;
     padding-top: 5%;
+    line-height: 2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+  video {
+    width: 100%;
+  }
+  .video h1 {
+    position: absolute;
+    top: 93%;
+    z-index: 5;
+  }
+  .book {
+    position: absolute;
+    width: 33rem;
+    height: 33rem;
+    top: 50%;
+    transform: translateY(-30%);
   }
   /* leader */
   .leaders h2 {
