--- a/public/stylesheets/coursesJEE.css
+++ b/public/stylesheets/coursesJEE.css
@@ -2,12 +2,13 @@
 .coursesneet{
     width: 100%;
     height: 90vh;
-    background: url('images/courses/jee.jpg');
+    background: url('../images/courses/jee.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    background-attachment: fixed;
 }
 /*Heading*/
 .h1andh2{
