--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -36,6 +36,7 @@
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
+                required
               />
             </div>
             <div>
