--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -35,6 +35,7 @@
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
+								required
 							/>
 						</div>
 						<div>
