--- a/views/admin/home/neetAchievements.ejs
+++ b/views/admin/home/neetAchievements.ejs
@@ -36,7 +36,7 @@
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
                 value="<%= seats %> "
-
+                required
               />
             </div>
             <div class="input-group flex-nowrap mt-3" style="width: 80%">
@@ -49,7 +49,7 @@
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
                 value="<%= consecutiveyears %> "
-
+                required
               />
             </div>
             <div class="input-group flex-nowrap mt-3" style="width: 80%">
@@ -62,6 +62,7 @@
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
                 value="<%= successrate %> "
+                required
               />
             </div>
             <div class="input-group flex-nowrap mt-3" style="width: 80%">
@@ -74,7 +75,7 @@
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
                 value="<%= admissions %> "
-
+                required
               />
             </div>
             <div>
