--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -10,7 +10,7 @@
   <body>
     <%- include('./layout/header') %>
     <section class="video">
-      <video autoplay muted loop>
+      <video class="vidAbout" autoplay muted loop>
         <source src="../images/aboutus/vidAbout.mp4" type="video/mp4" />
       </video>
       <h1>EXPECT THE BEST...</h1>
@@ -36,7 +36,9 @@
         </span>
         <p>
           1. To give awareness on competitive exams among the school students
-          and develop science and maths foundation in school going children. 
+          and develop science and maths foundation in school going children.
+        </p>
+
         <p>
           2.To impart state of art training for the competitive exams such as
           NEET, JEE etc., to the students and develop competitive spirit to set
@@ -47,9 +49,11 @@
     <section class="timeline">
       <h2>Our Journey So Far</h2>
       <span
-        ><img src="../images/home/classic-nee-tacademy-logo.png" alt="CLASSICNEET"
+        ><img
+          src="../images/home/classic-nee-tacademy-logo.png"
+          alt="CLASSICNEET"
       /></span>
-      <img src="../images/aboutus/group19.png" class="book" alt="">
+      <img src="../images/aboutus/group19.png" class="book" alt="" />
       <div class="cards1">
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
