--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -31,7 +31,7 @@
       </p> 
     
  
-      <img src="../public/images/courses/Rectangle 55.png" alt="/">
+      <img src="../images/courses/Rectangle55.png" alt="/">
     
     </span>
   </section>
@@ -39,9 +39,9 @@
     <span>
     <h2><b>Course Durations</b></h2>
   </span>
-      <P><b>One-year course </b>  The course is specifically designed for those who wish to focus on JEE after completing their 11th class exams. </P>
-      <P><b>Crash Course: </b>  This course is meant for those who are appearing for their 12th class board exams and wish to focus on JEE after the Board exams. These students will be attempting JEE the same year. </P>
-      <P><b> School Tie up courses </b>  This course will be conducted in school premises for the benefit of students. 12 to 18 hours of classes will be conducted per week. This course not only helps for entrance exams but also for school curriculum. </P>
+      <p><b>One-year course </b>  The course is specifically designed for those who wish to focus on JEE after completing their 11th class exams. </p>
+      <p><b>Crash Course: </b>  This course is meant for those who are appearing for their 12th class board exams and wish to focus on JEE after the Board exams. These students will be attempting JEE the same year. </p>
+      <p><b> School Tie up courses </b>  This course will be conducted in school premises for the benefit of students. 12 to 18 hours of classes will be conducted per week. This course not only helps for entrance exams but also for school curriculum. </p>
       <!-- <P><b>Module 4: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
       <P><b>Module 5: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P> -->
 
