--- a/public/stylesheets/coursesNEET.css
+++ b/public/stylesheets/coursesNEET.css
@@ -1,13 +1,14 @@
 /* image*/
-.coursesneet{
+.coursesneet {
     width: 100%;
     height: 90vh;
-    background: url('../images/courses/neet.jpg');
+    background: url('../images/courses/neet.jpg') center/cover;
     background-repeat: no-repeat;
-    background-size: cover;
+
     display: flex;
     justify-content: center;
     flex-direction: column;
+    position: relative;
 }
 /*Heading*/
 .h1andh2{
@@ -16,11 +17,7 @@
 .headh1h2{
    padding: 2%;
 }
-.coursesneet{
-    position: relative;
-    height: 100vh;
-    width: 100%;
-}
+
 .coursesneet h1{
     color:#568036 ; 
     font-size: 45px; 
