--- a/public/stylesheets/successStories2.css
+++ b/public/stylesheets/successStories2.css
@@ -16,7 +16,7 @@
     grid-template-columns: repeat(3,1fr);
     justify-items: center;
     
-    
+    grid-row-gap: 9rem;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
