--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -92,7 +92,7 @@
     <section class="app">
       <div class="apppage">
         <h2>Get Our Learning<br />App</h2>
-        <img src="images/aboutus/download.jpg" />
+        <a href="" ><img src="images/aboutus/download.jpg" /></a>
       </div>
     </section>
     <%- include('./layout/footer') %>
