--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -82,10 +82,13 @@
 				
 				<div class="footer_head">
 					<div class="social">
-						<img src="https://img.icons8.com/color/50/000000/youtube-play.png" />
-						<img src="https://img.icons8.com/fluency/48/000000/facebook.png" />
-						<img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" />
+						<a href="https://www.youtube.com/channel/UC80L5_LkKEhR7ORHDEKvNAQ"><img src="https://img.icons8.com/color/50/000000/youtube-play.png" /></a>
+						<a href=""><img src="https://img.icons8.com/fluency/48/000000/facebook.png" /></a>
+						<a href=""><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
+						<a href="https://play.google.com/store/apps/details?id=eduapplet.classicneet"><img src="images/aboutus/download.jpg" style='width: 8vw; height: 5vh;margin: 0.8rem;'/></a>
 					</div>
+					
+				
 				</div>
 				<div class="footer-last">@Copyright Classic Neet Academy 2020</div>
 				
