--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheets/coursesJEE.css" />
     <title>CoursesJEE</title>
-</head>
-<body>
+  </head>
+  <body>
     <%- include('./layout/header') %>
     <!--courses JEE-->
-  <section class="coursesneet">
-      
-    <!-- <img src="../img/courses/neet.jpg" class="neetimage" alt="/"> -->
-    <span class="h1andh2">
-      <h1 class="headh1h2"><b>COURSES</b></h1> 
-       <h2 class="headh1h2"><b>IIT-JEE</b></h2>
-    </span>
-  
-    <svg xmlns="http://www.w3.org/2000/svg" class="leftarrow" viewBox="0 0 20 20" fill="currentColor">
-      <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z" clip-rule="evenodd" />
-    </svg>
+    <section class="coursesneet">
+      <!-- <img src="../img/courses/neet.jpg" class="neetimage" alt="/"> -->
+      <span class="h1andh2">
+        <h1 class="headh1h2"><b>COURSES</b></h1>
+        <h2 class="headh1h2"><b>IIT-JEE</b></h2>
+      </span>
 
-</section>
-  <section class="overview">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="leftarrow"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z"
+          clip-rule="evenodd"
+        />
+      </svg>
+    </section>
+    <section class="overview">
     <h2><b>OVERVIEW</b></h2>
     <span class="overviewspan">
       <p>This course starts it's journey from the class 11 and will be available till the JEE Main exam. 
@@ -42,16 +49,16 @@
       <p><b>One-year course </b>  The course is specifically designed for those who wish to focus on JEE after completing their 11th class exams. </p>
       <p><b>Crash Course: </b>  This course is meant for those who are appearing for their 12th class board exams and wish to focus on JEE after the Board exams. These students will be attempting JEE the same year. </p>
       <p><b> School Tie up courses </b>  This course will be conducted in school premises for the benefit of students. 12 to 18 hours of classes will be conducted per week. This course not only helps for entrance exams but also for school curriculum. </p>
-      <!-- <P><b>Module 4: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 5: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P> -->
+      
 
    
-  <!-- </section> -->
+  
   <section class="drive">
   <div class="bottom-drive">
     <a href="/">Download Free Questions Bank for Neet 2021- Latest edition 2021</a>
   </div>
 </section>
+    
     <%- include('./layout/footer') %>
-</body>
+  </body>
 </html>
