--- a/views/home.ejs
+++ b/views/home.ejs
@@ -372,7 +372,7 @@
 					</div>
 					<div  class="Stat">
 						<h1 class="counter" data-target=15>0.</h1>
-						<h3>NIT & IIST <br> Admission1</h3>
+						<h3>NIT & IIST <br> Admission</h3>
 					</div>
 
 				</div>
