--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin panel</title>
-    <link rel="stylesheet" href="alert/dist/sweetalert.css">
+    <!-- <link rel="stylesheet" href="alert/dist/sweetalert.css"> -->
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -16,6 +17,22 @@
   </head>
   <body>
     <%- include('../../layout/adminheader') %>
+    <!-- <template id="my-template">
+      <swal-title>
+        
+      </swal-title>
+      <swal-icon type="warning" color="red"></swal-icon>
+      <swal-button type="confirm" >
+        <p class="confirmdelete">Confirm Delete</p> 
+      </swal-button>
+      <swal-button type="cancel">
+        Cancel
+      </swal-button>
+      <swal-param name="allowEscapeKey" value="false" />
+      <swal-param
+        name="customClass"
+        value='{ "popup": "my-popup" }' />
+    </template> -->
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSidebar') %></div>
       <div class="right">
@@ -48,7 +65,7 @@
         <form
           action="/admin/latestupdates?_method=DELETE"
           method="post"
-          class="imgform"
+          class="imgform latestupdateform"
         >
           <h1 class="m-5">Latest Updates</h1>
 
@@ -94,7 +111,6 @@
             <button
               type="button"
               class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
-              
             >
               Delete
             </button>
@@ -102,7 +118,9 @@
         </form>
       </div>
     </section>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.js" integrity="sha512-K3MtzSFJk6kgiFxCXXQKH6BbyBrTkTDf7E6kFh3xBZ2QNMtb6cU/RstENgQkdSLkAZeH/zAtzkxJOTTd8BqpHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <script src="../../javascripts/admin/home/LatestUpdates.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
