--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
 		<link rel="stylesheet" href="../../stylesheets/admin.css" />
+		<link rel="stylesheet" href="sweetalert2.min.css">
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -54,7 +55,7 @@
 				<form
 					action="/admin/studenttestimonials?_method=DELETE"
 					method="post"
-					class="imgform"
+					class="imgform latestupdateform"
 				>
 					<h1 class="m-5">Student Testimonials</h1>
 					<table class="table" style="width: 70%">
@@ -98,7 +99,7 @@
 						</button>
 						<button
 							type="button"
-							class="btn btn-outline-danger submit ms-5 px-3"
+							class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
 						>
 							Delete
 						</button>
@@ -107,6 +108,8 @@
 			</div>
 		</section>
 		<script src="../../javascripts/admin/home/studentTestimonials.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
