--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -20,7 +20,7 @@
 			<div class="left"><%- include('../../layout/adminSidebar') %></div>
 			<div class="right">
 				<div class="preview">
-					<h1 class="mb-5">Latest Updates</h1>
+					<h1 class="mb-5">Student Testimonials</h1>
 					<form
 						action="/admin/studenttestimonials"
 						method="post"
