--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -92,7 +92,7 @@
     <section class="app">
       <div class="apppage">
         <h2>Get Our Learning<br />App</h2>
-        <a href="" ><img src="images/aboutus/download.jpg" /></a>
+        <a href="https://play.google.com/store/apps/details?id=eduapplet.classicneet" ><img src="images/aboutus/download.jpg" /></a>
       </div>
     </section>
     <%- include('./layout/footer') %>
