--- a/public/stylesheets/coursesNEET.css
+++ b/public/stylesheets/coursesNEET.css
@@ -195,3 +195,190 @@
     font-family: sans-serif;
     line-height: 1.5rem;
 }
+.box1 {
+    flex-direction: row;
+}
+.box2 {
+    flex-direction: row-reverse;
+}
+.box3 {
+    flex-direction: row;
+}
+
+.neetBox1 {
+    background-color: blanchedalmond;
+    width: 90%;
+    position: relative;
+    display: flex;
+    /* flex-direction: row; */
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3rem;
+    -webkit-clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
+  clip-path: polygon(10% 5%, 90% 5%, 100% 50%, 90% 95%, 10% 95%, 0% 50%);
+  /* border-radius: 20px; */
+    /* border-radius: 300px 0px 300px 0px; */
+}
+
+/* .neetBox1::after {
+    content: "";
+    position:absolute;
+    margin:-150px;
+    width:300px;
+    height:300px;
+    transform:rotate(45deg);
+    
+} */
+.hexa {
+    width: 40%;
+    background-color: rgb(253, 196, 196);
+}
+.neetContent1 {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    
+    padding: 3rem;
+}
+.neetContent2 {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    
+    padding: 3rem;
+}
+.neetContent1 h1 {
+    text-align: center;
+}
+.neetContent2 h1 {
+    text-align: center;
+}
+.neetContent1 p {
+    width: 80%;
+    line-height: 2rem;
+    text-align: justify;
+    /* margin-left: auto; */
+    margin-right: auto;
+}
+.neetContent2 p {
+    width: 80%;
+    line-height: 2rem;
+    text-align: justify;
+    margin-left: auto;
+    /* margin-right: auto; */
+}
+.neetContent1 ul {
+    text-align: justify;
+    width: 80%;
+    /* margin-left: auto; */
+    margin-right: auto;
+    line-height: 1.5rem;
+}
+.neetContent2 ul {
+    text-align: justify;
+    width: 80%;
+    margin-left: auto;
+    /* margin-right: auto; */
+    line-height: 1.5rem;
+}
+.neetContent1 h3 {
+    margin: 1.5rem;
+}
+.neetContent2 h3 {
+    margin: 1.5rem;
+}
+.bg1 {
+
+    background: url(../images/courses/vec1.png) center/contain;
+}
+.bg2 {
+    background: url(../images/courses/vector3.png) center/contain;
+}
+.bg3 {
+    background: url(../images/courses/Vector5.png) center/contain;
+}
+.hex1 {
+    background-repeat: no-repeat;
+    width: 80%;
+    position: relative;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+.hex2 {
+    flex-direction: row-reverse;
+}
+.hexMain {
+    /* background-color: blue; */
+    width: 100%;
+}
+
+.hexBox {
+    width: 55%;
+    background-color: rgba(255, 255, 255, 0.63);
+    height: 70%;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 4rem;
+}
+.hexBox2 {
+    margin-right: 0rem !important;
+    margin-left: 4rem !important;
+}
+.hexTitle {
+    text-align: center;
+    padding: 1rem;
+}
+.hexContent {
+    width: 70%;
+    padding: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2rem;
+    font-size: 18px;
+}
+.neet1btn {
+    padding:  .5rem 1rem;
+    border-radius: 20px;
+    background-color: #526DF0;
+    color: white;
+    border: none;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+.methodology1 {
+   background-color: white;
+   width: 50%;
+   padding: 3rem;
+   border-radius: 20px;
+
+
+}
+.methodology1 h1 {
+    text-align: center;
+    
+}
+.methodology1 ul {
+    line-height: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+.bgmeth {
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    /* background-color: rgba(0, 0, 0, 0.753); */
+    backdrop-filter: blur(30px);
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+}   
+
