--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -27,6 +27,45 @@
         </ul>
       </div>
     </section>
+    <section class="bgmeth2">
+      <div class="methodology2">
+        <h1>Course Methodology</h1>
+        <ul>
+          <li>Full day course from Monday to Saturday</li>
+          <li>Classes with proven faculties</li>
+          <li>
+            Daily test, Unit test, Unit Cumulative Test, Revision test, Full
+            length NEET Mock tests
+          </li>
+          <li>Individual Mark Analysis</li>
+          <li>Attendance, Mark status update SMS to parents</li>
+          <li>Interactive Doubt clearing sessions</li>
+          <li>Problem solving session for each units</li>
+          <li>Frequent Parent-teacher Meeting</li>
+          <li>Exam tips and tricks, Motivational Sessions</li>
+        </ul>
+      </div>
+    </section>
+    <section class="bgmeth3">
+      <div class="methodology3">
+        <h1>Course Methodology</h1>
+        <ul>
+          <li>Full day course from Monday to Saturday</li>
+          <li>Classes with proven faculties</li>
+          <li>
+            Daily test, Unit test, Unit Cumulative Test, Revision test, Full
+            length NEET Mock tests
+          </li>
+          <li>Individual Mark Analysis</li>
+          <li>Attendance, Mark status update SMS to parents</li>
+          <li>Interactive Doubt clearing sessions</li>
+          <li>Problem solving session for each units</li>
+          <li>Frequent Parent-teacher Meeting</li>
+          <li>Exam tips and tricks, Motivational Sessions</li>
+        </ul>
+      </div>
+    </section>
+
     <%- include('./layout/header') %>
 
     <!--courses Neet-->
@@ -272,6 +311,7 @@
             board exams. The course will start at their 11th std and will be
             conducted till their NEET exam. Course Methodology
           </p>
+          <button class="neet2btn">Read more</button>
         </div>
       </div>
     </section>
@@ -284,6 +324,7 @@
             The course is specifically designed for those who wish to focus on
             NEET after completing their 11th class exams.
           </p>
+          <button class="neet3btn">Read more</button>
         </div>
       </div>
     </section>
@@ -297,6 +338,7 @@
             class board exams and wish to focus on NEET after the Board exams.
             These students will be attempting NEET the same year.
           </p>
+          <button class="neet4btn">Read more</button>
         </div>
       </div>
     </section>
