--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -45,54 +45,59 @@
         </p>
       </div>
     </section>
-    <!-- Timeline -->
-    <section class="timeline">
-      <h2>Our Journey So Far</h2>
-      <span
-        ><img
-          src="../images/home/classic-nee-tacademy-logo.png"
-          alt="CLASSICNEET"
-      /></span>
-      <img src="../images/aboutus/group19.png" class="book" alt="" />
-      <div class="cards1">
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry.
-        </p>
-      </div>
-      <div class="cards2">
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry.
-        </p>
-      </div>
-      <div class="cards3">
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry.
-        </p>
-      </div>
-      <div class="cards4">
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry.
-        </p>
-      </div>
-    </section>
     <!-- leaders -->
-
     <section class="leaders">
-      <h2>Our Founders</h2>
-      <span><img src="images/aboutus/leader.jpg" alt="Leader" /></span>
+      <h1>Our Founders</h1>
+      <div class="leadervideo">
+        <iframe width="725" height="425" src="https://www.youtube.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </section>
+      <!-- Timeline -->
+      <section class="timeline">
+        <h1>Our Journey So Far</h1>
+        <span
+          ><img
+            src="../images/home/classic-nee-tacademy-logo.png"
+            alt="CLASSICNEET"
+        /></span>
+        <img src="../images/aboutus/group19.png" class="book" alt="" />
+        <div class="cards1">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry.
+          </p>
+        </div>
+        <div class="cards2">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry.
+          </p>
+        </div>
+        <div class="cards3">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry.
+          </p>
+        </div>
+        <div class="cards4">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry.
+          </p>
+        </div>
+      </section>
     <section class="app">
       <div class="apppage">
-        <h2>Get Our Learning<br />App</h2>
-        <a href="" ><img src="images/aboutus/download.jpg" /></a>
+        <h2>Get Our Learning<br/>App</h2>
+        <img src="images/aboutus/Vector2.png" class="vector3">
+        <img src="images/aboutus/Vector1.png" class="Vector2">
+        <img src="images/aboutus/Vector.png" class="vector1" >
+        <a href="https://play.google.com/store/apps/details?id=eduapplet.classicneet" ><img src="images/aboutus/download.jpg" /></a>
+      
       </div>
     </section>
     <%- include('./layout/footer') %>
