--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -1,3 +1,13 @@
+.swiper {
+  width: 100%;
+  height: 100vh;
+}
+
+.swiper-slide img{
+  height: 90vh;
+  width: 100%;
+}
+
 .section2 {
     position: relative;
     height: 140vh;
