--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,99 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheets/results.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
     <title>Results</title>
-</head>
-<body>
+  </head>
+  <body>
     <%- include('./layout/header') %>
     <!-- Swiper -->
-    <section class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="../img/homepage/img1.jpeg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="../img/homepage/img2.jpeg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="../img/homepage/img3.jpeg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="../img/homepage/img4.jpeg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="../img/homepage/img2.jpeg" alt="" />
-          </div>
+    <!-- Slider main container -->
+<section class="swiper">
+  <!-- Additional required wrapper -->
+  <div class="swiper-wrapper">
+    <!-- Slides -->
+    <div class="swiper-slide"><img src="../../images/home/img1.jpeg" alt="" /></div>
+    <div class="swiper-slide"><img src="../../images/home/img2.jpeg" alt="" /></div>
+    <div class="swiper-slide"><img src="../../images/home/img3.jpeg" alt="" /></div>
+    <div class="swiper-slide"><img src="../../images/home/img4.jpeg" alt="" /></div>
+  </div>
+  <!-- If we need pagination -->
+  <div class="swiper-pagination"></div>
+
+  <!-- If we need navigation buttons -->
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+
+  <!-- If we need scrollbar -->
+  <div class="swiper-scrollbar"></div>
+</section>
+
+    <section class="section2">
+      <div class="gridcontainer">
+        <div class="griditem1 gridbox">
+          <img src="images/Result/image1.png" alt="studentimg1" />
+          <span class="griditem1span"
+            ><h3>Maya,Neet</h3>
+            <p>715/720</p></span
+          >
         </div>
-        <!-- <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div> -->
-        <div class="swiper-pagination"></div>
-      </section>
-  
-      <section class="section2">
-        <div class="gridcontainer">
-          <div class="griditem1 gridbox">
-            <img src="../img/Result/image1.png" alt="studentimg1" />
-            <span class="griditem1span"
-              ><h3>Maya,Neet</h3>
-              <p>715/720</p></span
-            >
-          </div>
-          <div class="griditem2 gridbox">
-            <img src="../img/Result/image2.png" alt="studentimg2" />
-            <span class="griditem2span"
-              ><h3>Bharath,Neet</h3>
-              <p>710/720</p></span
-            >
-          </div>
-          <div class="griditem3 gridbox">
-            <img src="../img/Result/image3.png" alt="studentimg3" />
-            <span class="griditem3span"
-              ><h3>Max,Neet</h3>
-              <p>700/720</p></span
-            >
-          </div>
-          <div class="griditem4 gridbox">
-            <img src="../img/Result/image4.png" alt="studentimg4" />
-            <span class="griditem4span"
-              ><h3>Anu,Neet</h3>
-              <p>659/720</p></span
-            >
-          </div>
-          <div class="griditem5 gridbox">
-            <img src="../img/Result/image5.png" alt="studentimg5" />
-            <span class="griditem5span"
-              ><h3>Bhuvana,Neet</h3>
-              <p>700/720</p></span
-            >
-          </div>
-          <div class="griditem6 gridbox">
-            <img src="../img/Result/image6.png" alt="studentimg6" />
-            <span class="griditem6span"
-              ><h3>David,Neet</h3>
-              <p>650/720</p></span
-            >
-          </div>
-          <div class="griditem7 gridbox">
-            <img src="../img/Result/image7.png" alt="studentimg7" />
-            <span class="griditem7span"
-              ><h3>Gokul,Neet</h3>
-              <p>655/720</p></span
-            >
-          </div>
-          <div class="griditem8 gridbox">
-            <img src="../img/Result/image8.png" alt="studentimg8" />
-            <span class="griditem8span"
-              ><h3>Jaya,Neet</h3>
-              <p>600/720</p></span
-            >
-          </div>
+        <div class="griditem2 gridbox">
+          <img src="images/Result/image2.png" alt="studentimg2" />
+          <span class="griditem2span"
+            ><h3>Bharath,Neet</h3>
+            <p>710/720</p></span
+          >
         </div>
-      </section>
-  
+        <div class="griditem3 gridbox">
+          <img src="images/Result/image3.png" alt="studentimg3" />
+          <span class="griditem3span"
+            ><h3>Max,Neet</h3>
+            <p>700/720</p></span
+          >
+        </div>
+        <div class="griditem4 gridbox">
+          <img src="images/Result/image4.png" alt="studentimg4" />
+          <span class="griditem4span"
+            ><h3>Anu,Neet</h3>
+            <p>659/720</p></span
+          >
+        </div>
+        <div class="griditem5 gridbox">
+          <img src="images/Result/image5.png" alt="studentimg5" />
+          <span class="griditem5span"
+            ><h3>Bhuvana,Neet</h3>
+            <p>700/720</p></span
+          >
+        </div>
+        <div class="griditem6 gridbox">
+          <img src="images/Result/image6.png" alt="studentimg6" />
+          <span class="griditem6span"
+            ><h3>David,Neet</h3>
+            <p>650/720</p></span
+          >
+        </div>
+        <div class="griditem7 gridbox">
+          <img src="images/Result/image7.png" alt="studentimg7" />
+          <span class="griditem7span"
+            ><h3>Gokul,Neet</h3>
+            <p>655/720</p></span
+          >
+        </div>
+        <div class="griditem8 gridbox">
+          <img src="images/Result/image8.png" alt="studentimg8" />
+          <span class="griditem8span"
+            ><h3>Jaya,Neet</h3>
+            <p>600/720</p></span
+          >
+        </div>
+      </div>
+    </section>
+
     <%- include('./layout/footer') %>
-</body>
+    <script src="javascripts/results.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
