--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -10,6 +10,7 @@
   <body>
     <section class="bgmeth">
       <div class="methodology1">
+        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
         <h1>Course Methodology</h1>
         <ul>
           <li>Full day course from Monday to Saturday</li>
@@ -29,39 +30,43 @@
     </section>
     <section class="bgmeth2">
       <div class="methodology2">
+        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
         <h1>Course Methodology</h1>
         <ul>
-          <li>Full day course from Monday to Saturday</li>
-          <li>Classes with proven faculties</li>
+          <li>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving </li>
+          <li>Integrated and comprehensive coverage of XI and XII syllabus</li>
           <li>
-            Daily test, Unit test, Unit Cumulative Test, Revision test, Full
-            length NEET Mock tests
+            Separate Study Materials for Physics, Chemistry & Biology
           </li>
+          <li>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
+          <li>Solution booklets for problems in Study Material Books</li>
+          <li>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
           <li>Individual Mark Analysis</li>
-          <li>Attendance, Mark status update SMS to parents</li>
           <li>Interactive Doubt clearing sessions</li>
           <li>Problem solving session for each units</li>
-          <li>Frequent Parent-teacher Meeting</li>
-          <li>Exam tips and tricks, Motivational Sessions</li>
+          <li>Concept Capsules</li>
+      
         </ul>
       </div>
     </section>
     <section class="bgmeth3">
       <div class="methodology3">
+        <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
         <h1>Course Methodology</h1>
         <ul>
-          <li>Full day course from Monday to Saturday</li>
-          <li>Classes with proven faculties</li>
+          <li>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving</li>
+          <li>Integrated and comprehensive coverage of XI and XII syllabus</li>
           <li>
-            Daily test, Unit test, Unit Cumulative Test, Revision test, Full
-            length NEET Mock tests
+            Separate Study Materials for Physics, Chemistry & Biology
           </li>
+          <li>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
+          <li>Solution booklets for problems in Study Material Books</li>
+          <li>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
           <li>Individual Mark Analysis</li>
-          <li>Attendance, Mark status update SMS to parents</li>
           <li>Interactive Doubt clearing sessions</li>
           <li>Problem solving session for each units</li>
-          <li>Frequent Parent-teacher Meeting</li>
-          <li>Exam tips and tricks, Motivational Sessions</li>
+          <li>Concept Capsules</li>
+        
         </ul>
       </div>
     </section>
@@ -74,6 +79,7 @@
       <span class="h1andh2">
         <h1 class="headh1h2"><b>COURSES</b></h1>
         <h2 class="headh1h2"><b>NEET</b></h2>
+        <a href="/contactus"><button class="enroll1">Enroll Now!</button></a>
       </span>
 
       <a href="home" style="text-decoration: none; color: #000"
@@ -342,6 +348,8 @@
         </div>
       </div>
     </section>
+
+    <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
 
     <%- include('./layout/footer') %>
 
