--- a/public/stylesheets/successStories2.css
+++ b/public/stylesheets/successStories2.css
@@ -3,11 +3,11 @@
 	margin: 0;
 	box-sizing: border-box;
 }
-
+/* 
 .secMain {
-    /* background-color: blue; */
+   background-color: blue; 
     
-}
+} */
 .vector {
     width: 100%;
 }
