--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../stylesheets/successStories2.css" />
+    <link rel="stylesheet" href="stylesheets/common.css" />
     <title>Success Stories</title>
   </head>
   <body>
@@ -127,7 +128,8 @@
         </div>
       </div>
       
-      <img class="vector" src="../images/successStories/Vector 9.png" alt="" />
+      <!-- <img class="vector" src="../images/successStories/Vector 9.png" alt="" /> -->
     </section>
+    <%- include('./layout/footer') %>
   </body>
 </html>
