--- a/views/results.ejs
+++ b/views/results.ejs
@@ -93,6 +93,34 @@
             <p>600/720</p></span
           >
         </div>
+        <div class="griditem9 gridbox">
+          <img src="images/Result/image5.png" alt="studentimg7" />
+          <span class="griditem7span"
+            ><h3>Gee,Neet</h3>
+            <p>655/720</p></span
+          >
+        </div>
+        <div class="griditem10 gridbox">
+          <img src="images/Result/image3.png" alt="studentimg7" />
+          <span class="griditem7span"
+            ><h3>Varsha,Neet</h3>
+            <p>655/720</p></span
+          >
+        </div>
+        <div class="griditem11 gridbox">
+          <img src="images/Result/image1.png" alt="studentimg7" />
+          <span class="griditem7span"
+            ><h3>Pavithra,Neet</h3>
+            <p>680/720</p></span
+          >
+        </div>
+        <div class="griditem12 gridbox">
+          <img src="images/Result/image3.png" alt="studentimg7" />
+          <span class="griditem7span"
+            ><h3>Akash,Neet</h3>
+            <p>700/720</p></span
+          >
+        </div>
       </div>
     </section>
 
