--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -83,8 +83,8 @@
 				<div class="footer_head">
 					<div class="social">
 						<a href="https://www.youtube.com/channel/UC80L5_LkKEhR7ORHDEKvNAQ"><img src="https://img.icons8.com/color/50/000000/youtube-play.png" /></a>
-						<a href=""><img src="https://img.icons8.com/fluency/48/000000/facebook.png" /></a>
-						<a href=""><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
+						<a href="https://www.facebook.com/CLASSICNEETACADEMYSALEM/"><img src="https://img.icons8.com/fluency/48/000000/facebook.png" /></a>
+						<a href="https://www.instagram.com/classic_neet_academy/?hl=en"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png" /></a>
 						<a href="https://play.google.com/store/apps/details?id=eduapplet.classicneet"><img src="images/aboutus/download.jpg" style='width: 8vw; height: 5vh;margin: 0.8rem;'/></a>
 					</div>
 					
