--- a/public/stylesheets/demovideos.css
+++ b/public/stylesheets/demovideos.css
@@ -1,8 +1,18 @@
 .Getyourvideos{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(#1face896,#0000003d)
+    background: url(../images/demo/demovideosbg.png ) center/cover
     
+}
+.Getyourvideos::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 .video{
     border: 2px solid black;
@@ -17,22 +27,51 @@
     height: 10vh;
     top: 15%;
     left: 33%;  
+    z-index: 2;
 }
-.stream span {
+.stream1 {
+   position: absolute;
+   top: 57%;
+   left: 21%;
+   z-index: 2;
+}
+.stream2 {
+    position: absolute;
+    top: 57%;
+    right: 21%;
+    z-index: 2;
+}
+.stream3 {
+    position: absolute;
+    top:85%;
+    left: 30%;
+    z-index: 2;
+}
+.stream4{
+    position: absolute;
+    top:85%;
+    right: 30%;
+    z-index: 2;
+}
+select, .stream3 button , .stream4 button  {
+    padding: 1rem 4rem;
+    border-radius: 25px !important;
+    border: 2px solid black;
+    font-size: 18px !important;
+}
+.stream  {
+
      border: 2px solid black;
-     background-color: white;
-     position: absolute;
      display: flex;
      align-items: center;
      justify-content: center;
-     border-radius: 25px;
+     
      width: 19%;
      height: 9vh;
-     font-size: 23px;
-     top:57%;
-     left: 21%;
+     
+     
 }
-.stream span p{
+.stream  button{
     position: absolute;
     left: 12%;
 }
@@ -105,15 +144,16 @@
 
 .gridcontainer {
     position: relative;
-    width: 100%;
-    height: 120vh;    
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    grid-row-gap: 3rem;
+    /* height: 120vh;     */
     display: grid;
-    grid-template-areas:
-    "cont1 cont2"
-    "cont3 cont4";
-    align-items: center;
-    justify-content: space-around;
-    padding: 3rem 3rem 0rem 2rem;
+    grid-template-columns: repeat(3,1fr);
+    justify-items: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 .grid{
     position: relative;
@@ -123,18 +163,9 @@
     display: flex;
     align-items: center;
 }
-.griditem1 {
-    grid-area: cont1;
-   
-}
-.griditem2 {
-    grid-area: cont2;  
-}
-.griditem3 {
-    grid-area: cont3;  
-}
-.griditem4 {
-    grid-area: cont4;  
+iframe {
+
+    border-radius: 20px !important;
 }
 .griditem1,.griditem2{
     padding: 2rem 3rem 0rem 2rem;
