--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -13,18 +13,36 @@
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
         <h1>Course Methodology</h1>
         <ul>
-          <li>Full day course from Monday to Saturday</li>
-          <li>Classes with proven faculties</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span> Full day course from Monday to Saturday</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Classes with proven faculties</li>
           <li>
-            Daily test, Unit test, Unit Cumulative Test, Revision test, Full
+            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Daily test, Unit test, Unit Cumulative Test, Revision test, Full
             length NEET Mock tests
           </li>
-          <li>Individual Mark Analysis</li>
-          <li>Attendance, Mark status update SMS to parents</li>
-          <li>Interactive Doubt clearing sessions</li>
-          <li>Problem solving session for each units</li>
-          <li>Frequent Parent-teacher Meeting</li>
-          <li>Exam tips and tricks, Motivational Sessions</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Individual Mark Analysis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Attendance, Mark status update SMS to parents</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Interactive Doubt clearing sessions</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Problem solving session for each units</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Frequent Parent-teacher Meeting</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Exam tips and tricks, Motivational Sessions</li>
         </ul>
       </div>
     </section>
@@ -33,18 +51,38 @@
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
         <h1>Course Methodology</h1>
         <ul>
-          <li>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving </li>
-          <li>Integrated and comprehensive coverage of XI and XII syllabus</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving </li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Integrated and comprehensive coverage of XI and XII syllabus</li>
           <li>
-            Separate Study Materials for Physics, Chemistry & Biology
+            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Separate Study Materials for Physics, Chemistry & Biology
           </li>
-          <li>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
-          <li>Solution booklets for problems in Study Material Books</li>
-          <li>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
-          <li>Individual Mark Analysis</li>
-          <li>Interactive Doubt clearing sessions</li>
-          <li>Problem solving session for each units</li>
-          <li>Concept Capsules</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Solution booklets for problems in Study Material Books</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Individual Mark Analysis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Interactive Doubt clearing sessions</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Problem solving session for each units</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Concept Capsules</li>
       
         </ul>
       </div>
@@ -54,18 +92,38 @@
         <span class="exit"><img src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"/></span>
         <h1>Course Methodology</h1>
         <ul>
-          <li>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving</li>
-          <li>Integrated and comprehensive coverage of XI and XII syllabus</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Classroom training is complemented by Basic Study Material that focuses on both concepts and techniques of problem solving</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Integrated and comprehensive coverage of XI and XII syllabus</li>
           <li>
-            Separate Study Materials for Physics, Chemistry & Biology
+            <span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Separate Study Materials for Physics, Chemistry & Biology
           </li>
-          <li>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
-          <li>Solution booklets for problems in Study Material Books</li>
-          <li>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
-          <li>Individual Mark Analysis</li>
-          <li>Interactive Doubt clearing sessions</li>
-          <li>Problem solving session for each units</li>
-          <li>Concept Capsules</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry & Biology</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Solution booklets for problems in Study Material Books</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Progress Report Booklet to keep record of the student’s performance in order to keep the parents updated on a continuous basis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Individual Mark Analysis</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Interactive Doubt clearing sessions</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Problem solving session for each units</li>
+          <li><span ><svg class="tick" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg></span>Concept Capsules</li>
         
         </ul>
       </div>
