--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/demovideos.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Demo Videos</title>
 </head>
 <body>
@@ -13,35 +14,39 @@
         <div class="video">
             <p>Get your demo videos here</p>
         </div>
-        <div class="stream">
-            <span>
-              <p>STREAM</p>
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-              </svg>
-          </span>
-        </div>
-        <div class="subject">
-          <span>
-          <p>SUBJECT</p>
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-          </svg>
-        </span>
-        </div>
-        <div class="submit">
-          <p>SUBMIT</p>
-        </div>
-        <div class="reset">
-          <p>RESET</p>
-        </div>
+        <span class="stream1">
+          <!-- <label class="mr-sm-2" for="inlineFormCustomSelect">Preference</label> -->
+          <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+            <option selected>Stream</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+      </span>
+      <span class="stream2">
+        <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+          <option selected>Subject</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </span>
+      <span class="stream3">
+        <button>Submit</button>
+      </span>
+      <span class="stream4">
+        <button>Reset</button>
+      </span>
     </section>
     <section class="gridcontainer">
-            <iframe class="griditem1" width="450" height="300" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem2" width="450" height="300" src="https://www.youtube-nocookie.com/embed/3g0n8f-bZ7U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem3" width="450" height="300" src="https://www.youtube-nocookie.com/embed/OUQ1FXrOJKA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem4" width="450" height="300" src="https://www.youtube-nocookie.com/embed/3ZPTqfJImjI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="griditem1" width="450" height="240" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="griditem1" width="450" height="240" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="griditem1" width="450" height="240" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="griditem2" width="450" height="240" src="https://www.youtube-nocookie.com/embed/3g0n8f-bZ7U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="griditem3" width="450" height="240" src="https://www.youtube-nocookie.com/embed/OUQ1FXrOJKA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="griditem4" width="450" height="240" src="https://www.youtube-nocookie.com/embed/3ZPTqfJImjI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <%- include('./layout/footer') %>
 </body>
 </html>
