--- a/public/stylesheets/coursesJEE.css
+++ b/public/stylesheets/coursesJEE.css
@@ -1,27 +1,24 @@
 /* image*/
-.coursesneet{
+.coursesneet {
     width: 100%;
     height: 90vh;
-    background: url('../images/courses/jee.jpg');
+    background: url('../images/courses/neet.jpg') center/cover;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-attachment: fixed;
+
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-attachment: fixed;
+    position: relative;
 }
 /*Heading*/
 .h1andh2{
     padding: 5%;  
 }
 .headh1h2{
-   padding: 2%;
+   padding: .5%;
 }
-.coursesneet{
-    position: relative;
-    height: 100vh;
-    width: 100%;
-}
+
 .coursesneet h1{
     color:#568036 ; 
     font-size: 45px; 
@@ -40,12 +37,12 @@
     left: 0rem;
     position: fixed;
 }
+
 /*OVERVIEW*/
 
 .overview{
     height: 82vh;
     width: 100%;
-    position: relative;
 }
 .overview h2{
     padding: 4rem 4rem 0 4rem;
@@ -57,9 +54,7 @@
     height: 50vh;
     word-spacing: 5px;
     line-break: normal;
-    line-height: 2rem;
-    font-size: 18px;
-    font-weight: 500;
+    line-height: 175%;
     padding: 2rem 4rem 1rem 2rem;
 
 }
@@ -73,12 +68,8 @@
     
 }
 .overview img{
-    width: 25%;
-    height: 45%;
-    /* border-radius: 50%; */
-    /* position: absolute; */
-    /* right: 5%;
-    top: 8%; */
+    width: 30%;
+    height: 60%;
     
     
 }
@@ -90,7 +81,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top:     7rem;
 }
 
 .module h2{
@@ -100,15 +90,12 @@
     
 }
 .module p {
-    width: 70%;
+    /* width: 100%; */
     word-spacing: 5px;
     /* padding-left: 10%; */
-    margin-top: 2rem ;
+    display: flex;
     position: relative;
-    line-height: 2rem;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: left;
+    line-height: 200%;
     
 }
 .module span{
@@ -118,11 +105,10 @@
 
 
 .bottom-drive {
-    margin: 4rem;
     border: 1px solid black;
     padding: 10px 90px;
     border-radius: 20px;
-    width: 90%;
+    width: 65%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -140,4 +126,312 @@
     align-items: center;
     height: 35vh;
 
+}
+
+.sec1 {
+    /* background: url(../images/courses/bg1.png) center/cover; */
+    background-size: 120%;
+    background-repeat: no-repeat;
+    
+}
+.neetSection {
+    position: relative;
+    
+    background-color: #60efff4b;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4rem ;
+    margin-bottom: 4rem;
+    /* box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2); */
+    border-radius: 20px;
+    padding: 2rem 0rem 0rem 0rem;
+    
+}
+
+
+.neetSection h1 {
+    /* position: absolute; */
+    text-align: center;
+    /* margin: 2rem; */
+    padding: .5rem 0rem;
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.774);
+}
+.heading2 {
+    text-align: center;
+    margin: 1rem;
+}
+.heading3 {
+    text-align: center;
+    /* margin-top: 1rem; */
+}
+.neetSection p {
+    font-size: 18px;
+    text-align: justify;
+    font-weight: 500;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.8rem;
+    font-family: sans-serif;
+    padding: 2rem;
+}
+
+.neetSection ul {
+    text-align: justify;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-top: 4rem ; */
+    /* margin-bottom: 3rem; */
+    padding: 2rem;
+    font-size: 16px;
+    font-weight: 500;
+    /* letter-spacing: 2px; */
+    font-family: sans-serif;
+    line-height: 1.5rem;
+}
+.box1 {
+    flex-direction: row;
+}
+.box2 {
+    flex-direction: row-reverse;
+}
+.box3 {
+    flex-direction: row;
+}
+
+.neetBox1 {
+    background-color: blanchedalmond;
+    width: 90%;
+    position: relative;
+    display: flex;
+    /* flex-direction: row; */
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3rem;
+    -webkit-clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
+  clip-path: polygon(10% 5%, 90% 5%, 100% 50%, 90% 95%, 10% 95%, 0% 50%);
+  /* border-radius: 20px; */
+    /* border-radius: 300px 0px 300px 0px; */
+}
+
+/* .neetBox1::after {
+    content: "";
+    position:absolute;
+    margin:-150px;
+    width:300px;
+    height:300px;
+    transform:rotate(45deg);
+    
+} */
+.hexa {
+    width: 40%;
+    background-color: rgb(253, 196, 196);
+}
+.neetContent1 {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    
+    padding: 3rem;
+}
+.neetContent2 {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    
+    padding: 3rem;
+}
+.neetContent1 h1 {
+    text-align: center;
+}
+.neetContent2 h1 {
+    text-align: center;
+}
+.neetContent1 p {
+    width: 80%;
+    line-height: 2rem;
+    text-align: justify;
+    /* margin-left: auto; */
+    margin-right: auto;
+}
+.neetContent2 p {
+    width: 80%;
+    line-height: 2rem;
+    text-align: justify;
+    margin-left: auto;
+    /* margin-right: auto; */
+}
+.neetContent1 ul {
+    text-align: justify;
+    width: 80%;
+    /* margin-left: auto; */
+    margin-right: auto;
+    line-height: 1.5rem;
+}
+.neetContent2 ul {
+    text-align: justify;
+    width: 80%;
+    margin-left: auto;
+    /* margin-right: auto; */
+    line-height: 1.5rem;
+}
+.neetContent1 h3 {
+    margin: 1.5rem;
+}
+.neetContent2 h3 {
+    margin: 1.5rem;
+}
+.bg1 {
+
+    background: url(../images/courses/hexbox1.png) center/contain;
+    transform: rotate(0.48deg);
+}
+.bg2 {
+    background: url(../images/courses/hexbox2.png) center/contain;
+    transform: rotate(0.48deg);
+}
+.bg3 {
+    background: url(../images/courses/hexbox1.png) center/contain;
+    transform: rotate(0.48deg);
+}
+.hex1 {
+    background-repeat: no-repeat;
+    width: 80%;
+    position: relative;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+.hex2 {
+    flex-direction: row-reverse;
+}
+.hexMain {
+    /* background-color: blue; */
+    width: 100%;
+    /*  */
+}
+.bg1:nth-child(1) {
+    margin-top: 4rem;
+}
+.hexBox {
+    width: 55%;
+    background-color: rgba(255, 255, 255, 0.63);
+    height: 70%;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-right: 4rem;
+    
+}
+.hexBox2 {
+    margin-right: 0rem !important;
+    margin-left: 4rem !important;
+}
+.hexTitle {
+    text-align: center;
+    /* padding: 1rem; */
+}
+.hexContent {
+    width: 75%;
+    /* padding: 1rem; */
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2rem;
+    font-size: 17px;
+
+}
+.neet1btn, .neet2btn, .neet3btn, .neet4btn {
+    padding:  .5rem 1rem;
+    border-radius: 20px;
+    background-color: #526DF0;
+    color: white;
+    border: none;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+.methodology1 , .methodology2, .methodology3{
+   background-color: white;
+   width: 50%;
+   padding: 3rem;
+   border-radius: 20px;
+   position: relative;
+
+
+}
+.methodology1 h1 , .methodology2 h1 , .methodology3 h1 {
+    text-align: center;
+    padding-bottom: 2rem;
+    
+}
+.methodology1 ul , .methodology2 ul ,.methodology3 ul {
+    line-height: 1.8rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+.bgmeth , .bgmeth2 , .bgmeth3 {
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    /* background-color: rgba(0, 0, 0, 0.753); */
+    backdrop-filter: blur(30px);
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+}
+.enroll1:hover {
+    background-color: #2c2e2a;
+    color: rgb(255, 255, 255);
+}
+.enroll:hover {
+    background-color: #2c2e2a;
+    color: rgb(255, 255, 255);
+}    
+.enroll1 {
+    padding: .8rem 1.5rem;
+    position: relative;
+    font-size: 18px;
+    font-weight: 600;
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
+    border-radius: 10px;
+    background-color: #F49A08;
+    color: rgb(0, 0, 0);
+    box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
+    border: none;
+    margin: 1rem 0rem;
+}
+.enroll {
+    padding: 1rem 1.5rem;
+    position: relative;
+    font-size: 18px;
+    font-weight: 600;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    background-color: #F47D03;
+    box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
+    border: none;
+    margin: 2rem 0rem;
+}
+
+
+
+.exit {
+    position: absolute;
+    right: 2%;
+    top: 3%;
 }
