--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -9,56 +9,86 @@
   </head>
   <body>
     <%- include('./layout/header') %>
-    <!--courses JEE-->
+    <!--courses Neet-->
     <section class="coursesneet">
-      <!-- <img src="../img/courses/neet.jpg" class="neetimage" alt="/"> -->
+      
       <span class="h1andh2">
         <h1 class="headh1h2"><b>COURSES</b></h1>
         <h2 class="headh1h2"><b>IIT-JEE</b></h2>
+        <a href="/contactus"><button class="enroll1">Enroll Now!</button></a>
       </span>
 
-      <a href=""><svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="leftarrow"
-        viewBox="0 0 20 20"
-        fill="#000"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z"
-          clip-rule="evenodd"
-        />
-      </svg></a>
+      <a href="home" style="text-decoration: none; color: #000"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="leftarrow"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z"
+            clip-rule="evenodd"
+          /></svg></a>
     </section>
-    <section class="overview">
-    <h2><b>OVERVIEW</b></h2>
-    <span class="overviewspan">
-      <p>This course starts it's journey from the class 11 and will be available till the JEE Main exam. 
-        Around the class 10, the students get involved in the basis of this course and trained accordingly within the JEE Main exam. 
-      </p> 
-    
- 
-      <img src="../images/courses/Rectangle55.png" alt="/">
-    
-    </span>
-  </section>
-  <section class="module">
-    <span>
-    <h2><b>Course Durations</b></h2>
-  </span>
-      <p><b>One-year course </b>  The course is specifically designed for those who wish to focus on JEE after completing their 11th class exams. </p>
-      <p><b>Crash Course: </b>  This course is meant for those who are appearing for their 12th class board exams and wish to focus on JEE after the Board exams. These students will be attempting JEE the same year. </p>
-      <p><b> School Tie up courses </b>  This course will be conducted in school premises for the benefit of students. 12 to 18 hours of classes will be conducted per week. This course not only helps for entrance exams but also for school curriculum. </p>
-      
-
-   
-  
-  <section class="drive">
-  <div class="bottom-drive">
-    <a href="/">Download Free Questions Bank for Neet 2021- Latest edition 2021</a>
-  </div>
-</section>
-    
+    <section class="hexMain">
+      <div class="hex1 bg1">
+        <img src="../images/courses/heximg1.png" alt="" />
+        <div class="hexBox">
+          <h1 class="hexTitle">REPEATERS</h1>
+          <p class="hexContent">
+            This course is meant for those who have completed their 12th class
+            board exams and might have already attempted the NEET. They will
+            appear for NEET in the coming year after one year of training
+            focused on NEET.
+          </p>
+          <button class="neet1btn">Read more</button>
+        </div>
+      </div>
+    </section>
+    <section class="hexMain">
+      <div class="hex1 hex2 bg2">
+        <img src="../images/courses/heximg11.png" alt="" />
+        <div class="hexBox hexBox2">
+          <h1 class="hexTitle">Two-year course</h1>
+          <p class="hexContent">
+            This course is meant for students who have completed their 10th std
+            board exams. The course will start at their 11th std and will be
+            conducted till their NEET exam. Course Methodology
+          </p>
+          <button class="neet2btn">Read more</button>
+        </div>
+      </div>
+    </section>
+    <section class="hexMain">
+      <div class="hex1 bg3">
+        <img src="../images/courses/heximg2.png" alt="" />
+        <div class="hexBox">
+          <h1 class="hexTitle">One-year course</h1>
+          <p class="hexContent">
+            The course is specifically designed for those who wish to focus on
+            NEET after completing their 11th class exams.
+          </p>
+          <button class="neet3btn">Read more</button>
+        </div>
+      </div>
+    </section>
+    <section class="hexMain">
+      <div class="hex1 hex2 bg2">
+        <img src="../images/courses/heximg3.png" alt="" />
+        <div class="hexBox hexBox2">
+          <h1 class="hexTitle">Crash course</h1>
+          <p class="hexContent">
+            This course is meant for those who are appearing for their 12th
+            class board exams and wish to focus on NEET after the Board exams.
+            These students will be attempting NEET the same year.
+          </p>
+          <button class="neet4btn">Read more</button>
+        </div>
+      </div>
+    </section>
+    <a href="/contactus"><button class="enroll">Enroll Now!</button></a>
     <%- include('./layout/footer') %>
+    <script src="../javascripts/courses.js"></script>
   </body>
 </html>
