--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -12,7 +12,7 @@
     <%- include('./layout/header') %>
 
     <section class="secMain">
-      <img class="vector" src="../images/successStories/Vector 8.png" alt="" />
+      <img class="vector" src="../images/successStories/Vector8.png" alt="" />
       <div class="cardMain">
         <div class="card">
           <img
