--- a/public/stylesheets/coursesJEE.css
+++ b/public/stylesheets/coursesJEE.css
@@ -291,16 +291,14 @@
 }
 .bg1 {
 
-    background: url(../images/courses/hexbox1.png) center/contain;
-    transform: rotate(0.48deg);
+    background: url(../images/courses/vec1.png) center/contain;
+    
 }
 .bg2 {
-    background: url(../images/courses/hexbox2.png) center/contain;
-    transform: rotate(0.48deg);
+    background: url(../images/courses/Vector3.png) center/contain;
 }
 .bg3 {
-    background: url(../images/courses/hexbox1.png) center/contain;
-    transform: rotate(0.48deg);
+    background: url(../images/courses/Vector5.png) center/contain;
 }
 .hex1 {
     background-repeat: no-repeat;
@@ -313,6 +311,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+}
+
+.hex1 img {
+    width: 29%;
 }
 .hex2 {
     flex-direction: row-reverse;
@@ -380,6 +382,12 @@
     line-height: 1.8rem;
     margin-left: auto;
     margin-right: auto;
+    list-style: none;
+}
+.tick {
+    width: 16px;
+    height: 14px;
+    margin-right: .5rem;
 }
 .bgmeth , .bgmeth2 , .bgmeth3 {
     display: none;
@@ -434,4 +442,78 @@
     position: absolute;
     right: 2%;
     top: 3%;
+}
+@media (max-width:1400px) {
+    .hex1 {
+        width: 90%;
+    }
+}
+
+@media (max-width:1250px) {
+    .hex1 {
+        height: 385px;
+    }
+    .hexBox {
+        height: 65%;
+    }
+    .hexContent {
+        font-size: 16px;
+        line-height: 1.8rem;
+    }
+    .hexTitle {
+        font-size: 1.3rem;
+    }
+}
+@media (max-width:1100px) {
+
+    .bg1 {
+
+        background: url(../images/courses/vec1.png) center/contain;
+        background-size: 100% 90%;
+        background-repeat: no-repeat;
+    }
+    .bg2 {
+        background: url(../images/courses/Vector3.png) center/contain;
+        background-repeat: no-repeat;
+        background-size: 100% 90%;
+    }
+    .bg3 {
+        background: url(../images/courses/Vector5.png) center/contain;
+        background-repeat: no-repeat;
+        background-size: 100% 90%;
+    }
+    .hexBox {
+        height: 70%;
+        /* width: 50%; */
+    }
+    .hex1 img {
+        width: 35%;
+        height: 80%;
+        transform: scale(.9);
+    }
+}
+
+@media (max-width:950px) {
+    .hexTitle {
+        font-size: 1.1rem;
+    }
+    .hexBox {
+        width: 52%;
+    }
+    .hexContent {
+        
+        line-height: 1.7rem;
+    }
+    .bg1 {
+        background-size: 100% 80%;
+    }
+    .bg2 {
+        background-size: 100% 80%;
+    }
+    .bg3 {
+        background-size: 100% 80%;
+    }
+    .hex1 {
+        height: 350px;
+    }
 }
