--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -24,11 +24,12 @@
           </select>
       </span>
       <span class="stream2">
-        <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-          <option selected>Subject</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+        <select class="custom-select mr-sm-2" id="inlineFormCustomSelect" >
+          <option selected >Subject</option>
+          <option value="1">Physics</option>
+          <option value="2">Chemistry</option>
+          <option value="3">Botany</option>
+          <option value="4">Zoology</option>
         </select>
       </span>
       <span class="stream3">
@@ -39,12 +40,12 @@
       </span>
     </section>
     <section class="gridcontainer">
-      <iframe class="griditem1" width="450" height="240" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe class="griditem1" width="450" height="240" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem1" width="450" height="240" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem2" width="450" height="240" src="https://www.youtube-nocookie.com/embed/3g0n8f-bZ7U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem3" width="450" height="240" src="https://www.youtube-nocookie.com/embed/OUQ1FXrOJKA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="griditem4" width="450" height="240" src="https://www.youtube-nocookie.com/embed/3ZPTqfJImjI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="griditem" width="450" height="260" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="griditem" width="450" height="260" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="griditem" width="450" height="260" src="https://www.youtube-nocookie.com/embed/xfek1WNPTRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="griditem" width="450" height="260" src="https://www.youtube-nocookie.com/embed/3g0n8f-bZ7U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="griditem" width="450" height="260" src="https://www.youtube-nocookie.com/embed/OUQ1FXrOJKA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="griditem" width="450" height="260" src="https://www.youtube-nocookie.com/embed/3ZPTqfJImjI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <%- include('./layout/footer') %>
